syntax = "proto3";

package saving;

import "commons.proto";

message Saving {
  string id = 1;
  string usersId = 2;
  string balanceAmount = 3;
  string createdAt = 6;
  string updatedAt = 7;
}

message CreateSavingInput {
  string usersId = 1;
  string balanceAmount = 2;
}

message UpdateSavingInput {
  string usersId = 1;
  string amount = 2;
}

service SavingsService {
  rpc findOne (commons.Query) returns (Saving) {}
  rpc create (CreateSavingInput) returns (Saving) {}
  rpc update (UpdateSavingInput) returns (Saving) {}
}
